check_log.txt
    Checking ralph-nano v0.2.0 (/Users/brixelectronics/Documents/mac/mobiusnano)
warning: unused import: `Context`
 --> src/memory.rs:1:14
  |
1 | use anyhow::{Context, Result, anyhow};
  |              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde_json::json`
 --> src/memory.rs:5:5
  |
5 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `anyhow::Result`
 --> src/janitor.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

warning: unused import: `serde_json::json`
 --> src/janitor.rs:2:5
  |
2 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `Oid`
 --> src/git_context.rs:8:38
  |
8 | use git2::{Repository, BlameOptions, Oid};
  |                                      ^^^

warning: unused import: `DateTime`
  --> src/git_context.rs:11:14
   |
11 | use chrono::{DateTime, Utc, TimeZone};
   |              ^^^^^^^^

warning: unused import: `Context`
 --> src/daemon.rs:6:14
  |
6 | use anyhow::{Context, Result};
  |              ^^^^^^^

warning: unused import: `std::sync::Arc`
  --> src/daemon.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Context` and `Result`
 --> src/qa.rs:6:14
  |
6 | use anyhow::{Context, Result};
  |              ^^^^^^^  ^^^^^^

warning: unused import: `DateTime`
 --> src/benchmarker.rs:7:14
  |
7 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^

warning: unused import: `Context`
 --> src/knowledge.rs:1:14
  |
1 | use anyhow::{Context, Result, anyhow};
  |              ^^^^^^^

warning: unused import: `anyhow::Result`
 --> src/debate.rs:7:5
  |
7 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

warning: unused import: `DebateRound`
  --> src/main.rs:28:22
   |
28 | use debate::{Debate, DebateRound, DebateSynthesis};
   |                      ^^^^^^^^^^^

error[E0599]: no function or associated item named `from_safetensors` found for struct `VarBuilderArgs<'a, B>` in the current scope
   --> src/memory.rs:149:41
    |
149 |         let vb = candle_nn::VarBuilder::from_safetensors(&[weights_filename], DType::F32, &device)?;
    |                                         ^^^^^^^^^^^^^^^^ function or associated item not found in `VarBuilderArgs<'_, std::boxed::Box<dyn SimpleBackend>>`
    |
note: if you're trying to build a new `VarBuilderArgs<'_, std::boxed::Box<dyn SimpleBackend>>` consider using one of the following associated functions:
      VarBuilderArgs::<'_, B>::new_with_args
      VarBuilderArgs::<'a, std::boxed::Box<(dyn SimpleBackend + 'a)>>::from_backend
      VarBuilderArgs::<'a, std::boxed::Box<(dyn SimpleBackend + 'a)>>::zeros
      VarBuilderArgs::<'a, std::boxed::Box<(dyn SimpleBackend + 'a)>>::from_tensors
      and 7 others
   --> /Users/brixelectronics/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/candle-nn-0.9.1/src/var_builder.rs:98:5
    |
 98 |       pub fn new_with_args(backend: B, dtype: DType, dev: &Device) -> Self {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
474 | /     pub fn from_backend(
475 | |         backend: Box<dyn SimpleBackend + 'a>,
476 | |         dtype: DType,
477 | |         device: Device,
478 | |     ) -> Self {
    | |_____________^
...
489 |       pub fn zeros(dtype: DType, dev: &Device) -> Self {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
495 |       pub fn from_tensors(ts: HashMap<String, Tensor>, dtype: DType, dev: &Device) -> Self {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `from_tensors` with a similar name
    |
149 -         let vb = candle_nn::VarBuilder::from_safetensors(&[weights_filename], DType::F32, &device)?;
149 +         let vb = candle_nn::VarBuilder::from_tensors(&[weights_filename], DType::F32, &device)?;
    |

warning: variable does not need to be mutable
   --> src/knowledge.rs:252:13
    |
252 |         let mut results = stream.collect::<Vec<_>>().await;
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `options`
   --> src/replicator.rs:313:13
    |
313 |         let options = fs_extra::dir::CopyOptions::new().overwrite(true).content_only(true);
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_options`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/debate.rs:255:13
    |
255 |         let mut consensus_points = Vec::new();
    |             ----^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/debate.rs:256:13
    |
256 |         let mut conflicts = Vec::new();
    |             ----^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `all_suggestions`
   --> src/debate.rs:260:13
    |
260 |         let all_suggestions: Vec<_> = rounds
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_all_suggestions`

warning: unreachable pattern
    --> src/main.rs:1756:17
     |
1756 |                 _ => {} // Handle remaining actions or new variants
     |                 ^ no value can reach this
     |
note: multiple earlier patterns match some of the same values
    --> src/main.rs:1756:17
     |
1662 |                 Action::WriteFile(path, content) => {
     |                 -------------------------------- matches some of the same values
...
1684 |                 Action::ExecShell(cmd) => {
     |                 ---------------------- matches some of the same values
...
1695 |                 Action::Directive(val) => {
     |                 ---------------------- matches some of the same values
...
1700 |                 Action::CallMcpTool(server, tool, _args) => {
     |                 ---------------------------------------- matches some of the same values
...
1756 |                 _ => {} // Handle remaining actions or new variants
     |                 ^ ...and 8 other patterns collectively make this unreachable
     = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `ralph-nano` (bin "ralph-nano") generated 19 warnings
error: could not compile `ralph-nano` (bin "ralph-nano") due to 1 previous error; 19 warnings emitted
